# network_lumping_tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/network_lumping/: __init__.py  network_lumping.py  version.py
src/network_lumping/graph_utils/: create_graph.py  network_functions.py
src/network_lumping/preprocessing/: general.py  preprocessing.py
src/network_lumping/utils/: folium_utils.py  general_functions.py
tests/: test_connect_endpoints.ipynb  test_connect_endpoints.py  test_find_upstream_network.py  test_netcdf.ipynb  test_preprocessing.ipynb  test_preprocessing.py  test_run_generator_basins_outflow_points.ipynb  test_run_generator_basins_random.ipynb  test_run_network_lumping.ipynb  test_use_outflow_points.py
